syntax = "proto3";

// Commons
message Empty { }
message KeyObject {
    string Body = 1;
}
message BooleanObject {
    bool Body = 1;
}
message PagingRequest {
    int32 PageIndex = 1;
    int32 PageSize = 2;
}